@startuml 

skinparam Style StrictUML
skinparam LineType ortho
skinparam monochrome true

class User{
    * Id << PK >> <Unique>
    * Name: String
    * Email: String
    * Password: String
}



class GroupUser{
    * User : String <<FK>>
    * Group : String <<FK>>
    * Tasks : ArrayList<Task> 

}


class Task {
    * ID << PK >> <Unique>
    * Title : String
    * Description : String
}


class Group {
    * Group ID  Int << PK >> <Unique>
    * Name String
    * Tasks : ArrayList<Task> 
}

class  GroupTask{
    * Status : String
    * Task ID : Int <<FK>>
    * User : String <<FK>>
    
}

User||--|{ GroupTask
Group ||--|{ GroupTask
Task ||--|{ GroupTask
GroupUser }|--||User
GroupUser }|--|| Group
' User ||--|{ Task
' Group ||--|{ Task









@enduml